# tech_challenge_fiap_mlet_fase_05

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
DATATHON/: BASE DE DADOS PEDE 2024 - DATATHON.xlsx  Links adicionais da passos.docx  PEDE_ Pontos importantes.docx
DATATHON/Bases antigas/: PEDE_PASSOS_DATASET_FIAP.xlsx
dashboards/: app.py
docs/: arquitetura.md  modelos.md
models/: model_v1.joblib  pipeline_v1.joblib  reference_data.parquet  training_metrics.json
src/api/: app.py  schemas.py
src/evaluation/: evaluate.py
src/monitoring/: drift_detector.py
src/preprocessing/: __init__.py  cleaner.py  data_loader.py  feature_engineering.py  pipeline.py
src/training/: run_training.py  train.py
src/utils/: constants.py  logging_config.py
tests/: conftest.py  test_api.py  test_cleaner.py  test_constants.py  test_data_loader.py  test_evaluation.py  test_feature_engineering.py  test_logging.py  test_monitoring.py  test_pipeline.py  test_run_training.py  test_schemas.py  test_training.py
