[project]
name = "passos-magicos-mlops"
version = "1.0.0"
description = "Pipeline MLOps para predição de defasagem escolar - Passos Mágicos"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=80"
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "dashboards/*", "notebooks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
