[tool.poetry]
name = "passos-magicos-mlops"
version = "1.0.0"
description = "Pipeline MLOps para predição de defasagem escolar - Passos Mágicos"
readme = "README.md"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
scikit-learn = ">=1.3.0"
openpyxl = ">=3.1.0"
joblib = ">=1.3.0"
fastapi = ">=0.100.0"
uvicorn = {version = ">=0.23.0", extras = ["standard"]}
pydantic = ">=2.0.0"
evidently = ">=0.4.0"
streamlit = ">=1.28.0"
plotly = ">=5.15.0"
python-dotenv = ">=1.0.0"
loguru = ">=0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
pytest-asyncio = ">=0.21.0"
httpx = ">=0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=80"
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "dashboards/*", "notebooks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
